--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body> 
 
     <h1>Etch-a-Sketch</h1>
+
+    <button id="btn1">Click me!</button>
     
-    <div id="container"></div>
+    <div id="container" class="grid"></div>
 
     <script src="index.js"></script>
 </body>
