--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         <output>50</output>
         <button id="size">Set Size</button>
     </div>
+
+    <div id="colorPicker"> 
+        <button id="black" style="width: 50px; height: 50px; background-color: black;"></button>
+        <button id="red" style="width: 50px; height: 50px; background-color: red;"></button>
+        <button id="green" style="width: 50px; height: 50px; background-color: green;"></button>
+        <button id="blue" style="width: 50px; height: 50px; background-color: blue;"></button>
+        <button id="yellow" style="width: 50px; height: 50px; background-color: yellow;"></button>
+        <button id="purple" style="width: 50px; height: 50px; background-color: purple;"></button>
+    </div>
     
     <div id="container" class="grid"></div>
 
