--- a/index.html
+++ b/index.html
@@ -12,23 +12,18 @@
 
     <h1>Etch-a-Sketch</h1>
 
-    <button id="clear">Clear Board</button>
-
     <div class="slideContainer">
         <p>Size:</p>
+        <button id="clear">Clear Board</button>
         <input id="slider" type="range" min="1" max="100" value="50" oninput="this.nextElementSibling.value = this.value">
         <output>50</output>
         <button id="size">Set Size</button>
     </div>
 
-    <div id="colorPicker"> 
-        <button id="black" style="width: 50px; height: 50px; background-color: black;"></button>
-        <button id="red" style="width: 50px; height: 50px; background-color: red;"></button>
-        <button id="green" style="width: 50px; height: 50px; background-color: green;"></button>
-        <button id="blue" style="width: 50px; height: 50px; background-color: blue;"></button>
-        <button id="yellow" style="width: 50px; height: 50px; background-color: yellow;"></button>
-        <button id="purple" style="width: 50px; height: 50px; background-color: purple;"></button>
-    </div>
+    <!-- <div id="colorPicker"> 
+        <button id="black" style="width: auto; height: 50px; background-color: black; color: white;">Black</button>
+        <button id="rainbow" style="width: auto; height: 50px; background-color: fuchsia;">Rainbow</button>
+    </div> -->
     
     <div id="container" class="grid"></div>
 
